kubernetes/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  topologyKeys:
    - "kubernetes.io/hostname"
    - "*"
